// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders accepted protection request 1`] = `<RequestActivating />`;

exports[`renders empty 1`] = `null`;

exports[`renders pending protection request 1`] = `
<RequestPending
  request={
    Object {
      "addressToRecover": null,
      "createdOn": "2021-06-10T13:48:00.000Z",
      "decisions": Array [
        Object {
          "decisionOn": null,
          "legalOfficerAddress": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
          "rejectReason": null,
          "status": "PENDING",
        },
        Object {
          "decisionOn": null,
          "legalOfficerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "rejectReason": null,
          "status": "PENDING",
        },
      ],
      "id": "2eb5f71c-7f31-44b5-9390-c3bf56501880",
      "isRecovery": false,
      "requesterAddress": "5H4MvAsobfZ6bBCDyj5dsrWYLrA8HrRzaqa9p61UXtxMhSCY",
      "status": "ACTIVATED",
      "userIdentity": Object {
        "email": "john.doe@logion.network",
        "firstName": "John",
        "lastName": "Doe",
        "phoneNumber": "+1234",
      },
      "userPostalAddress": Object {
        "city": "Liège",
        "country": "Belgium",
        "line1": "Place de le République Française, 10",
        "line2": "boite 15",
        "postalCode": "4000",
      },
    }
  }
/>
`;

exports[`renders protected 1`] = `
<RequestActivated
  request={
    Object {
      "addressToRecover": null,
      "createdOn": "2021-06-10T13:48:00.000Z",
      "decisions": Array [
        Object {
          "decisionOn": null,
          "legalOfficerAddress": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
          "rejectReason": null,
          "status": "PENDING",
        },
        Object {
          "decisionOn": null,
          "legalOfficerAddress": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          "rejectReason": null,
          "status": "PENDING",
        },
      ],
      "id": "2eb5f71c-7f31-44b5-9390-c3bf56501880",
      "isRecovery": false,
      "requesterAddress": "5H4MvAsobfZ6bBCDyj5dsrWYLrA8HrRzaqa9p61UXtxMhSCY",
      "status": "ACTIVATED",
      "userIdentity": Object {
        "email": "john.doe@logion.network",
        "firstName": "John",
        "lastName": "Doe",
        "phoneNumber": "+1234",
      },
      "userPostalAddress": Object {
        "city": "Liège",
        "country": "Belgium",
        "line1": "Place de le République Française, 10",
        "line2": "boite 15",
        "postalCode": "4000",
      },
    }
  }
/>
`;
